--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>幼富通 - 账户管理 - 密码设置</title>
-	<script>
+<title>幼富通 - 账户管理 - 密码设置</title>
+<script src="${staticDomain}/family/scripts/load.js"></script>
+<script src="${staticDomain}/family/scripts/family-common.js"></script>
+<script>
 $(function(){
 	//页面初始化 
 	$("form input[type=text],input[type=password]").each(function () {
@@ -229,9 +231,6 @@ $(function(){
 		}
 	});
 	
-	
-	#if($S_CUSTINFO.tradepwd)
-	
 	var check_updateTradepwd = function(){
 		 var result = false;
 			$.ajax({
@@ -302,30 +301,30 @@ $(function(){
 	});
 	
 	//找回交易密码的检验
-		function check_tradeback(){
-			var password1=$("#trade_password_back1").val();
-			if(password1==''){
-				$("#errMsg_password_back1").addClass("error");
-				$("#passwordBack1Tips").html("新交易密码不能为空！");
-				return false;
-			}
-			if(check_tradePwd1(password1)!=''){
-				$("#errMsg_password_back1").addClass("error");
-				$("#passwordBack1Tips").html(check_tradePwd1(password1));
-				return false;
-			}else{
-				$("#errMsg_password_back1").removeClass("error");
-			}
-			var password2=$("#trade_password_back2").val();
-			if(check_pwd2(password1,password2)!=''){
-				$("#errMsg_password_back2").addClass("error");
-				$("#passwordBack2Tips").html(check_pwd2(password1,password2));
-				return false;
-			}else{
-				$("#errMsg_password_back2").removeClass("error");
-			}
-			return true;
+	function check_tradeback(){
+		var password1=$("#trade_password_back1").val();
+		if(password1==''){
+			$("#errMsg_password_back1").addClass("error");
+			$("#passwordBack1Tips").html("新交易密码不能为空！");
+			return false;
 		}
+		if(check_tradePwd1(password1)!=''){
+			$("#errMsg_password_back1").addClass("error");
+			$("#passwordBack1Tips").html(check_tradePwd1(password1));
+			return false;
+		}else{
+			$("#errMsg_password_back1").removeClass("error");
+		}
+		var password2=$("#trade_password_back2").val();
+		if(check_pwd2(password1,password2)!=''){
+			$("#errMsg_password_back2").addClass("error");
+			$("#passwordBack2Tips").html(check_pwd2(password1,password2));
+			return false;
+		}else{
+			$("#errMsg_password_back2").removeClass("error");
+		}
+		return true;
+	}
 	
 	// 找回交易密码按钮
 	function tradePwdBack(){
@@ -358,7 +357,6 @@ $(function(){
 			$(".tradeBackStep2").attr("style","display:block;margin-top:-200px;");
 		}
 	});
-	#end
 	
 	// 用户输入时，取消错误提示
 	$("form input").on('focus', function(){
@@ -418,10 +416,8 @@ $(function(){
                 <div class="setting-content">
                     <div class="tabs password-tabs clearfix">
                         <a id="tab1" class="btn tab fl" href="javascript:;">修改登录密码</a>
-						#if($S_CUSTINFO.tradepwd)
-                        <a id="tab2" class="btn tab fl" href="javascript:;">修改交易密码</a>
+						<a id="tab2" class="btn tab fl" href="javascript:;">修改交易密码</a>
                         <a id="tab3" class="btn tab fl" href="javascript:;">忘记交易密码</a>
-						#end
                     </div>
                     <div class="tips">交易密码： 为使用幼富通平台内涉及理财、缴费等资金交易时所需要输入的密码，不可与登录密码相同！</div>
                     <div class="panels password-panels">
@@ -456,9 +452,8 @@ $(function(){
 	                        <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">我的账户</a>
 	                    </div>
 	                    </form>
-                </div>
-					#if($S_CUSTINFO.tradepwd)
-                        <div class="panel2 panel slide-out">
+                	</div>
+					<div class="panel2 panel slide-out">
                             <form class="common-form" id="form-settingTradePwd" action="${ufbDomain}/family/setting/update_tradePwd.htm" method="post">
 								 ${refreshTools.genInputHtml()}
                                 <ul class="tradeStep1">
@@ -497,10 +492,10 @@ $(function(){
                                 <ul class="tradeBackStep1">
                                     <li>
                                         <span class="form-title">手机号</span>
-                                        <div  > 
-											<input type="hidden" id="mobileno" name="mobileno" value="$!{S_CUSTINFO.mobileno}"/>
-										#if($S_CUSTINFO.mobileno)
-            			                 #set($tailStr=$S_CUSTINFO.mobileno)
+                                        <div> 
+											<input type="hidden" id="mobileno" name="mobileno" value="$!{CUSTINFO.mobileno}"/>
+										#if($CUSTINFO.mobileno)
+            			                 #set($tailStr=$CUSTINFO.mobileno)
             			                 #set($start=$tailStr.substring(0,3))
 										 #set($end=$tailStr.substring(7,11))
 										 $start****$end
@@ -546,14 +541,11 @@ $(function(){
     	                       </div>
                             </form>
                         </div>
-					#end
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script src="${staticDomain}/family/scripts/load.js"></script>
-<script src="${staticDomain}/family/scripts/family-common.js"></script>
 </body>
 </html>
