--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_card.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/register_card.vm
@@ -388,98 +388,8 @@
       </div>
     </div>
 </div>
- 
-<!----------------弹层------------------------->       
-<div class="bgBox"></div>	
-<!--《幼富宝服务协议》-->
-<div class="layerpop" id="ufb01">	
-    <b class="close"></b>
-    <div class="layerTitle">幼富宝服务协议</div>
-	<div id="content_1" class="content content_scroll">
-               <h4>幼富宝服务协议</h4>
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                    个体工商户无组织机构代码（仅支持个体工商户）<br>
-                    目前仅支持中国大陆企业；<br>
-                    注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <h4>幼富宝服务协议</h4>
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
-        <a href="javascript:;" class="btnKnow closebox">我知道了</a>
-    </div>
-</div> 
 
-
-<!--《海富通基金管理有限公司网上交易直销自助式前台服务协议》-->
-<div class="layerpop" id="hft">	
-    <b class="close"></b>
-    <div class="layerTitle">海富通基金管理有限公司网上交易直销自助式前台服务协议</div>
-	<div id="content_1" class="content content_scroll">
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
-        <a href="javascript:;" class="btnKnow closebox">我知道了</a>
-    </div>
-</div>     
-            
- 
-<!--《《幼富宝快捷支付服务协议》》-->
-<div class="layerpop" id="ufb02">	
-    <b class="close"></b>
-    <div class="layerTitle">《幼富宝快捷支付服务协议》</div>
-	<div id="content_1" class="content content_scroll">
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
-
-        <a href="javascript:;" class="btnKnow closebox">我知道了</a>
-    </div>
-</div>
-
-
-<!--《《幼富通实名认证服务协议》》-->
-<div class="layerpop" id="uft">	
-    <b class="close"></b>
-    <div class="layerTitle">《幼富通实名认证服务协议》</div>
-	<div id="content_1" class="content content_scroll">
-                <p>此处内容通过富文本编辑器进行编辑发布<br>
-                个体工商户无组织机构代码（仅支持个体工商户）<br>
-                目前仅支持中国大陆企业；<br>
-                注：个体工商类，若无组织机构代码，可以在选择项填写“无”，上传附件用营业执照代替即可。</p>
-
-                <p>对公账户填写（个体工商户）<br>
-                若个体工商户无对公账户，可填写营业执照上法人的个人银行卡号。<br>
-                温馨提示：仅限个体工商户，填写个人银行卡号时需与营业执照上法人保持一致。</p>
-
-                <p>对公账户填写（政府类型）<br>
-                若政府类型若没有对公账号，可以在“机构开户银行”、“机构银行账号”栏填写“无”。</p>
-
-        <a href="javascript:;" class="btnKnow closebox">我知道了</a>
-    </div>
-</div>   	
+<!-- 家庭用户协议  -->
+#parse("control/family/account/contract_card.vm")
 </body>
 </html>
